Add Swagger documentation generation to Makefile

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -11,3 +11,9 @@ migrate-down:
 mc: migrate-create
 mu: migrate-up
 md: migrate-down
+
+# Generate Swagger documentation
+swagger:
+	@swag init -g cmd/server/main.go
+
+sw: swagger
