Fix migrate-down command to specify version for database migration

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -8,7 +8,7 @@ migrate-up:
 	@$(MIGRATE_CMD) -database "sqlite3://pkg/db/social_network.db" -path pkg/db/migrations/sqlite up
 
 migrate-down:
-@$(MIGRATE_CMD) -database "sqlite3://pkg/db/social_network.db" -path pkg/db/migrations/sqlite down
+	@$(MIGRATE_CMD) -database "sqlite3://pkg/db/social_network.db" -path pkg/db/migrations/sqlite down 1
 
 migrate-force:
 	@echo "Forcing migration version to $(version)..."
