--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
