--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
       - "9001:9001"  # MinIO Console port
     volumes:
       - minio_data:/data # Persist data using a named volume
+      - ./minio-scripts:/minio-scripts # Mount the setup scripts
     environment:
-      MINIO_ROOT_USER: "YOUR_MINIO_ACCESS_KEY" # Replace with your desired access key
-      MINIO_ROOT_PASSWORD: "YOUR_MINIO_SECRET_KEY" # Replace with your desired secret key
-      MINIO_DEFAULT_BUCKETS: "images" # Automatically create an 'images' bucket on startup
-    command: server /data --console-address ":9001"
-    healthcheck: # Optional: Add a healthcheck
+      MINIO_ROOT_USER: "ak-123456"
+      MINIO_ROOT_PASSWORD: "sk-123456"
+      MINIO_DEFAULT_BUCKETS: "images"
+    entrypoint: sh
+    command: -c "/minio-scripts/entrypoint.sh"
+    healthcheck: # Docker's healthcheck remains useful for orchestration
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
