--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.2",
+    "@types/lodash": "^4.17.16",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
+    "lodash": "^4.17.21",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
