--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.17.16",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "next": "15.2.0",
