Update .dockerignore to allow production env files and modify Dockerfile to copy .env.production; change hostname in next.config.mjs to localhost

--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -11,7 +11,9 @@ out
 # Environment files
 .env*.local
 .env*.development
-.env*.production
+# Allow production env files
+!.env.production
+!.env
 
 # Testing
 coverage
